# test-wrap01

./: .copier-answers.yml  my-pyproject.toml  pyprojec.toml  pyproject.toml
.github/workflows/: ci.yaml
tests/: test_my_module.py
