# Poetry Setup
[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"


[project.optional-dependencies]
dev = [
    "build",  # build is not only used in publishing (below), but also in the template's test suite
    "bump-my-version",
    "ruff",
    "tox",
    "myst_parser",
    
]
publishing = [
    "build",
    "twine",
    "wheel",
]


# Project Metadata
[tool.poetry]
name = "capgemini_project_template"
version = "0.1.0"
description = ""
authors = ["Amir Boroufar <amir@sky.com>"]
readme = "README.md"
package-mode = false

# Project Public & Private Dependencies
[tool.poetry.dependencies]
python = ">=3.10,<3.15"
poetry-core = "^2.1.3"
python-dotenv = "^1.1.1"

# Project Testing Dependencies
[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^7.0.0"
ruff = "^0.7.2"
pre-commit = "^4.0.1"

[tool.mypy]
ignore_missing_imports = true

[tool.poetry.group.wrappers.dependencies]
chandra = {git = "gitlab@git.bskyb.com:plannet-users-team/chandra.git", branch = "main"}
plannet-client = {git = "gitlab@git.bskyb.com:plannet-users-team/plannet-client.git", branch = "main"}
sauron-client = {git = "gitlab@git.bskyb.com:plannet-users-team/sauron-client.git", branch="main"}
horizon-client = {git = "gitlab@git.bskyb.com:plannet-users-team/horizon-client.git",  branch="main"}